force-app/main/default/objects/LLC_BI__Field_Map__c/LLC_BI__Field_Map__c.object-meta.xml
<CustomObject>
    <description>The Field Map Object is used to specify fields from one object and populate another. it helps mitigate data re-entry. This object allows the user to create the link (&quot;map&quot;) from one field to another</description>
    <label>Field Map</label>
    <nameField>
        <label>Field Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>