force-app/main/default/objects/LLC_BI__Field_Map__c/fields/LLC_BI__Conditional_Mapping_Criteria__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Conditional_Mapping_Criteria__c</fullName>
    <description>Administrators manually populate this optional field with a conditional formula. The system evaluates the formula to determine if data mapping is required. By default, this field is blank.</description>
    <label>Conditional Mapping Criteria</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>