force-app/main/default/objects/LLC_BI__Field_Map__c/fields/LLC_BI__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relationship_Type__c</fullName>
    <description>This field is required and is manually populated. It is used during conversion processes to specify the type of relationship the field map should be respected for.</description>
    <label>Relationship Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>