force-app/main/default/objects/LLC_BI__Field_Map__c/fields/LLC_BI__Source_Formula__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Source_Formula__c</fullName>
    <description>Administrators manually populate this optional field with a formula. The system evaluates the formula to determine the value to map. By default, this field is blank.</description>
    <label>Source Formula</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>