force-app/main/default/objects/LLC_BI__Field_Map__c/fields/LLC_BI__Target_Obj_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Target_Obj_Value__c</fullName>
    <description>Administrators populate this optional text field. When populated, it specifies the Target Value to replace the matching Originating Value, instead of using the target object&apos;s value. By default, it is blank.</description>
    <inlineHelpText>Enter the value of the field you would like to map to the destination object. For a picklist, this will be the API value of the selected option.</inlineHelpText>
    <label>Target Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>