force-app/main/default/objects/LLC_BI__Field_Map__c/fields/User_LookUpField__c.field-meta.xml
<CustomField>
    <fullName>User_LookUpField__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User-LookUpField</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>